# mmi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.txt  rbfi_test.m
.github/workflows/: cmake.yml
PureData/: adsr.pd  controlpoint.pd  envelope.pd  spatial.pd
cmake/: FindFlext.cmake
include/: externals.h  gaussian.h  interpolation.h
src/: externals.cpp  gaussian.cpp  interpolation.cpp  main.cpp
